# slide-forge-llm

./: .gitignore  COMMANDS_TO_RUN.md  DOCS.md  LICENSE  README.md  pyproject.toml  setup_venv.sh  test_setup.py
data/: business_briefs.json
envs/slideforge_env/: __init__.py  client.py  models.py
envs/slideforge_env/server/: Dockerfile  app.py  environment.py  requirements.txt
envs/slideforge_env/server/rendering/: html_generator.py  renderer.py  themes.py
envs/slideforge_env/server/tools/: __init__.py  content.py  design.py  meta.py  research.py  structure.py
rewards/: aggregator.py  brief_reconstruction.py  claude_aesthetic.py  code_rules.py  content_quality.py  dino_aesthetic.py  render_quality.py
training/: compute_aggregate.py  evaluate.py  generate_plots.py  grpo_trainer.py  prompts.py  rollouts.py  run_training.py
